--- a/style/style.css
+++ b/style/style.css
@@ -49,7 +49,7 @@ input{
     border: none;
     font-size: 1.2rem;
     background-color: #141414;;
-    background-image: url('/images/icons/search-icon.png');
+    background-image: url('https://robertom123.github.io/movie-buff/images/icons/search-icon.png');
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 5px 20px 5px 40px;
